[package]
name = "rscms"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
mongodb = "2.6.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.0"
futures = "0.3"
